syntax = "proto3";
package passport.service.sns;
option go_package = "model";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message SnsProto {
    int64 Mid = 1 [(gogoproto.jsontag) = "mid"];
    string UnionID = 2 [(gogoproto.jsontag) = "unionid"];
    int32 Platform = 3 [(gogoproto.jsontag) = "platform"];
    int64 Expires = 4 [(gogoproto.jsontag) = "expires"];
}

message Oauth2Proto {
    int64 Mid = 1 [(gogoproto.jsontag) = "mid"];
    string UnionID = 2 [(gogoproto.jsontag) = "unionid"];
    string OpenID = 3 [(gogoproto.jsontag) = "openid"];
    int32 Platform = 4 [(gogoproto.jsontag) = "platform"];
    string AppID = 5 [(gogoproto.jsontag) = "appid"];
    string Token = 6 [(gogoproto.jsontag) = "token"];
    int64 Expires = 7 [(gogoproto.jsontag) = "expires"];
}